@startuml

class FIUBA {
-carreras: List<Carrera>
-alumnos: List<Alumno>

+inscribir(alumno: Alumno, carrera: Carrera): Boolean
+aprobar(alumno: Alumno, materia: Materia, carrera: Carrera): Boolean
+verEstado(alumno: Alumno, carrera: Carrera): String
}

class Alumno {
-padron: String
-nombre: String
-carreras: List<Carrera>
-materiasAprobadas: List<Materia>
}

class Carrera {
-codigo: String
-nombre: String
-obligatorias: List<Materia>
-optativas: List<Materia>
-creditos: Integer
}

class Materia {
-codigo: String
-nombre: String
-creditos: Integer
}

'Relaciones

FIUBA "1" *-- "*" Carrera: carreras
FIUBA "1" *-- "*" Alumno: alumnos
Carrera "1" o-- "*" Materia: obligatorias
Carrera "1" o-- "*" Materia: optativas
Alumno "1" o-- "*" Carrera: carreras

@enduml